hard-gists/5684769/run.log
=== Docker Run Log for 5684769 ===
Started at: Mi 29. Okt 15:53:31 CET 2025

[2025-10-29 15:53:31] START: Running container for 5684769
[2025-10-29 15:53:32] SUCCESS: Container e906f6240cdd7e1a52b83a9f51319ed0a7d002ad9a378afc660ff446c524ad61 started for 5684769
=== Container logs for 5684769 ===
  File "/snippet.py", line 17
    print popt
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5684769 ===
[2025-10-29 15:53:34] INFO: Container e906f6240cdd7e1a52b83a9f51319ed0a7d002ad9a378afc660ff446c524ad61 has stopped
